force-app/main/default/objects/sugati__Travelling_Country__c/sugati__Travelling_Country__c.object-meta.xml
<CustomObject>
    <label>Travelling Country</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Travelling Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travelling Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>