force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__Country_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Country_Name__c</fullName>
    <formula>sugati__TC_Country__r.Name</formula>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>