force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__Stage__c</fullName>
    <formula>TEXT(sugati__TC_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>