force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Accommodation_Region__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Accommodation_Region__c</fullName>
    <label>Accommodation/Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
                <default>true</default>
                <label>Accommodation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>