force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Booking_Stage__c</fullName>
    <inlineHelpText>Stage of the booking.</inlineHelpText>
    <label>Booking Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>