force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Country__c</fullName>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipLabel>Travelling Countries</relationshipLabel>
    <relationshipName>Travelling_Countries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>