force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Cover_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover Image</label>
    <type>Checkbox</type>
</CustomField>