force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_DestinationMap_Image_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_DestinationMap_Image_ID__c</fullName>
    <label>DestinationMap Image ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>