force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_DestinationMap_ZoomLevel__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_DestinationMap_ZoomLevel__c</fullName>
    <label>Destination Map Zoom Level</label>
    <length>5</length>
    <type>Text</type>
</CustomField>