force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Travelling Countries</relationshipLabel>
    <relationshipName>Travelling_Countries</relationshipName>
    <type>Lookup</type>
</CustomField>