force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_External_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_External_Image_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Image Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>