force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_ImageID__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_ImageID__c</fullName>
    <label>ImageID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>