force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Travelling Countries</relationshipLabel>
    <relationshipName>Travelling_Countries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>