force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Selected__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Selected__c</fullName>
    <inlineHelpText>When was the cover selected?</inlineHelpText>
    <label>Selected</label>
    <type>DateTime</type>
</CustomField>