force-app/main/default/objects/sugati__Travelling_Country__c/fields/sugati__TC_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Total_Cost__c</fullName>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>